--- a/src/Install.App/App.config
+++ b/src/Install.App/App.config
@@ -22,11 +22,8 @@
             <setting name="NetworkInterface" serializeAs="String">
                 <value />
             </setting>
-            <setting name="ImageDirectory" serializeAs="String">
+            <setting name="DataDirectory" serializeAs="String">
                 <value />
-            </setting>
-            <setting name="AutoStart" serializeAs="String">
-                <value>False</value>
             </setting>
         </Install.App.Properties.Settings>
     </userSettings>
