--- a/src/Install.App/Properties/Settings.settings
+++ b/src/Install.App/Properties/Settings.settings
@@ -17,11 +17,8 @@
     <Setting Name="NetworkInterface" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="ImageDirectory" Type="System.String" Scope="User">
+    <Setting Name="DataDirectory" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="AutoStart" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
