--- a/src/Install.App/App.config
+++ b/src/Install.App/App.config
@@ -25,6 +25,15 @@
             <setting name="DataDirectory" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Gateway" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="IpPublicAddress" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="UseIpPublic" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Install.App.Properties.Settings>
     </userSettings>
 </configuration>
